--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,14 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.git/
+.idea/
+__pycache__/
+aug/
+dataset/
+new_result/
+original/
+pic/
+pth/
+result/
+saved_model
